Added unordered list in the html file

--- a/class.html
+++ b/class.html
@@ -29,10 +29,11 @@
         <hr>
         <a href="sample.html"><img src="https://tse2.mm.bing.net/th/id/OIP.QGuxrMpbOlvrXIC7N5D_WAHaDT?pid=Api&P=0&h=180"></a>
         <h5>ordered list</h5>
-        <ol type="A">
+        <ul type="1">
             <hr>
-            <li>WT</li>
-            <li>DSA</li>
-        </ol>
+            <li>Playing cricket at the best level</li>
+            <li>Playing badminton at its best level</li>
+            <li>Playing ludo at its best level </li>
+        </ul>
        </body>
 </html>
